# src/infrastructure/auth/JWTAuthService.ts
@@ -1,7 +1,7 @@
 import jwt from "jsonwebtoken";
 import bcrypt from "bcryptjs";
 import { IUserRepository } from "../../application/interfaces/IUserRepository.js";
-import { config } from "../config/authConfig.js";
+import { authConfig } from "../config/authConfig.js";
 
 interface JwtPayload {
     id: string;
@@ -24,12 +24,12 @@ export class AuthService {
         }
 
         // Gera o access token (válido por 15 minutos)
-        const accessToken = jwt.sign({ id: user._id }, config.jwtSecret, {
+        const accessToken = jwt.sign({ id: user._id }, authConfig.jwtSecret, {
             expiresIn: "15m",
         });
 
         // Gera o refresh token (válido por 7 dias)
-        const refreshToken = jwt.sign({ id: user._id }, config.jwtRefreshSecret, {
+        const refreshToken = jwt.sign({ id: user._id }, authConfig.jwtRefreshSecret, {
             expiresIn: "7d",
         });
 
@@ -43,11 +43,11 @@ export class AuthService {
             // Verifica se o refresh token é válido
             const decoded = jwt.verify(
                 refreshToken,
-                config.jwtRefreshSecret,
+                authConfig.jwtRefreshSecret,
             ) as JwtPayload;
 
             // Gera um novo access token
-            const accessToken = jwt.sign({ id: decoded.id }, config.jwtSecret, {
+            const accessToken = jwt.sign({ id: decoded.id }, authConfig.jwtSecret, {
                 expiresIn: "15m",
             });
 
@@ -59,7 +59,7 @@ export class AuthService {
 
     async validateToken(token: string): Promise<JwtPayload | null> {
         try {
-            const decoded = jwt.verify(token, config.jwtSecret) as JwtPayload;
+            const decoded = jwt.verify(token, authConfig.jwtSecret) as JwtPayload;
             return decoded;
         } catch (error) {
             return null;
